@@ -21,7 +21,6 @@ package Config::Model::WarpedThing ;
 use strict;
 use Scalar::Util qw(weaken) ;
 use Data::Dumper ;
-use Config::Model::ValueComputer ;
 use Config::Model::Exception ;
 use Log::Log4perl qw(get_logger :levels);
 use Carp;
@@ -144,6 +143,9 @@ In this case, you can use different boolean expression to save typing:
 Note that the boolean expression will be sanitized and used in a Perl
 eval, so you can use most Perl syntax and regular expressions.
 
+Function (like C<&foo>) will be called like C<< $self->foo >> before evaluation\
+of the boolean expression.
+
 =cut
 
 sub check_warp_args {
@@ -223,7 +225,7 @@ sub submit_to_warp {
 
     $self->{warper_object} = {} unless defined $self->{warper_object} ;
 
-    my $follow = $info->{follow} ;
+    my $follow = $info->{follow} || {};
 
     # now, follow is only { w1 => 'warp1', w2 => 'warp2'}
     my @warper_paths = values %$follow ;
@@ -243,6 +245,8 @@ sub submit_to_warp {
 
     foreach my $warper_name (keys %$follow) {
 	my $warper_path = $follow -> {$warper_name} ;
+        $logger->debug( ref($self),' ',$self->name," following $warper_name");
+
 	my $warper = $self->get_warper_object($warper_path,1);
 
         $logger->debug( ref($self),' ',$self->name,
@@ -390,6 +394,8 @@ sub compute_bool {
     $logger ->debug("compute_bool: data:\n", 
 		    Data::Dumper->Dump([$warp_value_set],['data']));
 
+    $expr =~ s/&(\w+)/\$self->$1/g;
+
     my @init_code ;
     foreach my $warper_name (keys %$warp_value_set) {
 	my $v = $warp_value_set->{$warper_name} ;
@@ -477,16 +483,16 @@ sub get_master_object {
 
     $grab_non_available = 0 unless defined $grab_non_available ;
 
-    $logger->debug("Retrieving master object from '", $self->name, 
-		   "' with path '$master_path'");
-
     Config::Model::Exception::Internal
 	-> throw (
 		  object => $self,
 		  error => "get_master_object: parameter must be a string ".
 		  "or an array ref"
 		 )
-	  unless ref $master_path eq 'ARRAY' || not ref $master_path ;
+	  unless defined $master_path and (ref $master_path eq 'ARRAY' or not ref $master_path) ;
+
+    $logger->debug("Retrieving master object from '", $self->name, 
+		   "' with path '$master_path'");
 
     my $master 
       = eval {$self->grab(step => $master_path, 
