@@ -11,6 +11,9 @@
     - make warp skip warp master if they cannot be found with !SomeClass
     - Auto test of synopsises
 
+    * WarpedThing: Can warp based on the location in a tree. For instance to make
+    an element mandatory in one place and not in another. Used by Debian copyright model
+
 2011-02-11 Dominique Dumont  <domi.dumont@free.fr> 1.233
     
     * Application changes:
